# simadaOA

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
configs/archetypes/: adherent.yaml  moderate.yaml  nonadherent.yaml
configs/insulin/: mdi_profiles.yaml  pump_profiles.yaml
configs/meals/: brazilian_holiday.yaml  brazilian_weekday.yaml  brazilian_weekend.yaml  holidays.yaml  japan_weekday.yaml  japan_weekend.yaml  us_weekday.yaml  us_weekend.yaml
configs/scenarios/: 14day_stress_test.yaml  30day_full.yaml  7day_cohort.yaml
data/clinical/: ada_sbd_targets.json
data/taco/: japan_foods.csv  taco_foods.csv  us_foods.csv
paper_results/: README.md  integrator_check.py  integrator_check_worker.py  integrator_metric_diffs.csv  reproduce_equivalence.py  x3llmcm_adherent.csv  x3llmcm_moderate.csv  x3llmcm_nonadherent.csv  x3rule_adherent.csv  x3rule_moderate.csv  x3rule_nonadherent.csv  x4llmraw_adherent.csv  x4llmraw_moderate.csv  x4llmraw_nonadherent.csv
src/simada/: __init__.py
src/simada/analysis/: agp.py  export.py  metrics.py  plots.py  style.py  utils.py
src/simada/behavior/: __init__.py  circadian.py  counterregulation.py  exercise.py  schedule.py  snacking.py  stress.py
src/simada/cli/: main.py
tests/: conftest.py
tests/integration/: test_counterregulation_sim.py  test_pipeline.py  test_simulate_helper.py  test_single_day_sim.py
tests/property/: test_llm_adapter_safety.py  test_metrics_properties.py  test_physiology_properties.py
tests/unit/: test_analysis.py  test_analysis_fixes.py  test_behavior.py  test_behavior_fixes.py  test_cohort.py  test_config.py  test_controller.py  test_counterregulation.py  test_counterregulation_wiring.py  test_insulin.py  test_insulin_fixes.py  test_llm_plausibility.py  test_llm_scenario_adapter.py  test_llm_scenario_schema.py  test_llm_taco_mapping.py  test_meal_generator.py  test_meals_fixes.py  test_metrics.py  test_parallel.py  test_patient_fixes.py  test_random.py  test_renal.py  test_resilient_patient.py  test_scenario.py  test_scenario_core_fixes.py  test_streaming.py  test_synthetic_cohort.py  test_taco.py
tests/validation/: test_physiological_bounds.py
(+29 files in other folders)
