[project]
name = "simada"
version = "0.1.0"
description = "Simulation of AID Adherence — T1D behavioral simulation framework for Safe RL research"
requires-python = ">=3.12"
authors = [
    { name = "Dr. Filipe Augusto da Luz Lemos, MSc. Ph.D.", email = "filipellemos@gmail.com" }
]
maintainers = [
    { name = "Dr. Filipe Augusto da Luz Lemos, MSc. Ph.D.", email = "fadaluzl@syr.edu" }
]
license = { text = "GPL-3.0-or-later" }
keywords = ["diabetes", "t1d", "simulation", "reinforcement-learning", "insulin", "aid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"

dependencies = [
    "simglucose>=0.2.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "setuptools<71",  # simglucose depends on gym which needs distutils
    "tabulate>=0.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
]
gpu = [
    "torch>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
simada = "simada.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simada"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (run actual simulations for validation)",
]
